package com.g4.odontohub.financeiro.domain.model;

public enum StatusParcela {
    PENDENTE, LIQUIDADA, VENCIDA, SUBSTITUIDA
}
